[package]
name = "jupiter_perpetuals_analytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
serde = "1.0.188"
clap = { version = "4.4.14", features = ["derive"] }
csv = "1.3.0"
borsh = "0.10.3" 
solana-client = "1.16.23"
solana-sdk = "1.16.23"
solana-account-decoder = "1.16.23"
perp-abi = "0.1.0"
anchor-lang = "0.27.0"
pyth-sdk-solana = "0.9.0"
spl-token = "4.0.0"
thousands = "0.2.0"
